--- a/team/index.html
+++ b/team/index.html
@@ -608,21 +608,21 @@
             <!-- PAGE 1 -->
             <section id="welcome">
                 <h2 class="section-title">team member information</h2>
-                <div class="row"><label for="nick">your name</label><input id="nick" /></div>
+                <div class="row"><label for="nick">name</label><input id="nick"  placeholder="your name"></div>
                <div class="row">
-  <label for="email">your email</label>
+  <label for="email">email</label>
   <input 
     id="email" 
     name="email" 
     type="email" 
     required 
     autocomplete="email" 
-    />
+     placeholder="your email address">
 </div>
                 <div class="row">
-                    <label for="hotel">your location</label>
+                    <label for="hotel">location</label>
                     <select id="hotel" required="">
-                        <option disabled="" selected="" value="">select hotel</option>
+                        <option disabled="" selected="" value="">select your location</option>
                         <option>BED Changkian</option>
                         <option>BED Phrasingh</option>
                         <option>BED Nimman</option>
@@ -631,14 +631,14 @@
                         <option>BED Support</option>
                     </select>
                 </div>
-                <h2 class="section-title">your reviewer</h2>
+                <h2 class="section-title">peer reviewer information</h2>
                 <p class="intro">After you assess yourself a friend will review you. You can ask anyone in your team who knows you well and worked in BED for at least 12 months</p>
-                <div class="row"><label for="peerName">peer name</label><input id="peerName" /></div>
-                <div class="row"><label for="peerEmail">email peer</label><input id="peerEmail" type="email" /></div>
+                <div class="row"><label for="peerName">name</label><input id="peerName"  placeholder="peer reviewer name"></div>
+                <div class="row"><label for="peerEmail">email</label><input id="peerEmail" type="email"  placeholder="peer reviewer email"></div>
                 <div class="row">
-                    <label for="peerHotel">peer location</label>
+                    <label for="peerHotel">location</label>
                     <select id="peerHotel" required="">
-                        <option disabled="" selected="" value="">select hotel</option>
+                        <option disabled="" selected="" value="">select peer location</option>
                         <option>BED Changkian</option>
                         <option>BED Phrasingh</option>
                         <option>BED Nimman</option>
