--- a/peer/index.html
+++ b/peer/index.html
@@ -447,6 +447,7 @@ input[type="reset"],
   min-width: 100px !important;
   text-align: center;
   padding: 10px 12px;
+  font-size: 12px !important;
 }
 
 /* Optional: center buttons in rows such as popups or bottom navs */
