--- a/team/index.html
+++ b/team/index.html
@@ -1820,7 +1820,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 <div id="confirmModal" role="dialog" aria-modal="true" aria-labelledby="confirmTitle" aria-describedby="confirmText">
   <div class="modal-box">
-    <div id="confirmTitle" class="title">please confirm v1</div>
+    <div id="confirmTitle" class="title">please confirm</div>
     <div id="confirmText" class="text">after you submit your self-assessment the scores will be automatically saved</div>
     <div class="actions">
       <button id="cancelConfirm" class="btn-cancel" type="button">No</button>
@@ -1937,5 +1937,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
 
