--- a/peer/index.html
+++ b/peer/index.html
@@ -599,8 +599,9 @@
   #confirmModal .btn-cancel{background:#ddd;color:#333}
   #confirmModal .btn-ok{background:#1E90FF;color:#fff}
 </style>
-<!-- 🔧 BUTTON WIDTH FIX v3 — applies to all button types everywhere -->
+<!-- 🔧 BUTTON UNIFORMITY FIX v5 — global size, style, and alignment -->
 <style>
+/* === Make all buttons look identical everywhere === */
 button,
 a.btn,
 input[type="button"],
@@ -616,22 +617,52 @@ input[type="reset"],
   width: 100px !important;
   min-width: 100px !important;
   max-width: 100px !important;
-  text-align: center;
-  padding: 10px 12px;
-  white-space: nowrap;
-  display: inline-block;
-  cursor: pointer;
+  height: 42px !important;                     /* same height everywhere */
+  font-family: system-ui, Arial, sans-serif !important;
+  font-size: 13pt !important;                  /* unified readable size */
+  font-weight: 600 !important;                 /* semi-bold for clarity */
+  text-transform: none !important;             /* keep natural casing */
+  text-align: center !important;
+  padding: 10px 12px !important;
+  color: #fff !important;                      /* white text */
+  background-color: #1E90FF !important;        /* brand blue */
+  border: none !important;
+  border-radius: 12px !important;
+  white-space: nowrap !important;
+  display: inline-block !important;
+  cursor: pointer !important;
+  transition: background 0.2s ease-in-out;
 }
 
-/* Optional: center grouped buttons */
+/* Hover & disabled states for consistency */
+button:hover:not(:disabled),
+a.btn:hover:not(:disabled),
+.popup button:hover:not(:disabled),
+.modal button:hover:not(:disabled),
+.confirm button:hover:not(:disabled) {
+  background-color: #187bcd !important;        /* slightly darker blue */
+}
+
+button:disabled,
+.popup button:disabled,
+.modal button:disabled,
+.confirm button:disabled {
+  background-color: #ccc !important;
+  color: #666 !important;
+  cursor: not-allowed !important;
+}
+
+/* === Align and space all button rows globally (includes popups/modals) === */
 .actions,
 .popup .actions,
 .modal .actions,
-.confirm .actions {
-  display: flex;
-  gap: 12px;
-  justify-content: center;
-  align-items: center;
+.confirm .actions,
+.row-btns {
+  display: flex !important;
+  justify-content: flex-end !important;   /* right-align all buttons */
+  align-items: center !important;
+  gap: 12px !important;
+  margin-top: 20px !important;            /* adds one blank line above */
 }
 </style>
 
